[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voyager-ai"
version = "1.0.0"
description = "An Autonomous, Stateful, Multi-Agent Travel Planning Platform"
authors = [
    {name = "Rahul"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq",
    "langchain-community",
    "langchain-tavily",
    "langgraph",
    "streamlit",
    "pydantic",
    "python-dotenv",
    "tavily-python",
    "pydantic-settings"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests",
]
